methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:46: error: not found: value growFlower
  growFlower()
  ^FlowerCase:58: error: not found: value growFlower
  growFlower()
  ^